- Modified FullResourceManager to avoid annoying stack traces at platform shutdown
- Modified MainContainerImpl to start the AMS and DF threads in the SystemAgent Thread Group
- Created CFReflectiveIntrospector to support usage of java.util classes in ontological classes
- Committed automatically generated SL and ACL parser classes

BUG-FIXES:
- Included fix by Geoffrey De Smet to properly deal with loggers that are not JADE loggers. 

LEAP:
- Added support for ServiceHelper retrieval and usage in split container execution mode


ADD-ONS:


DOCUMENTATION:
- Updated tutorial on Content Languages and Ontologies with information about the new CFReflectiveIntrospector


POSSIBLE BACKWARD INCOMPATIBILITIES:
NONE



MAJOR CHANGES in JADE 3.4.1 (15th November 2006)  
==========================================================================
GENERAL IMPROVEMENTS:	
- Modified HTTP MTP to properly select the XML parser (by Krešimir Jurasovic - University of Zagreb).
- Substituted getHostName() with getCanonicalHostName() in HTTP MTP to resolve domain problems.
- Added support for low-level container introspection by means of the ContainerMonitorAgent (jade_core_AgentContainerImpl_enablemonitor parameter).
- Added method getParam(int index) to JADE commands (jade.core.Command class).
- Modified message tracing mechanism to take the ACLMessage.TRACE user define property into account.
- Improved agent cloning error management.
- Added generation of ShutdownPlatformRequested AMS event (Introspection Ontology)
- Modified ThreadedBehaviourFactory to support Threaded-behaviour suspension.
- Modified default behaviour of jade.wrapper.gatreway.GatewayAgent to automatically call releaseCommand() when a Behaviour is passed in the execute() method of the JadeGateway class.
- Refactored Notification Service to i) use sinks for owned commands, and ii) dispatch ContainerEvents.
- Modified Agent.powerUp() method to avoid starting the agent thread two times. 

BUG-FIXES: